--- a/Amazon/test-output/old/Suite/methods-alphabetical.html
+++ b/Amazon/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@399f45b1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>16</td> <td>&nbsp;</td><td title="&lt;&lt;Test_2.afterTest()[pri:0, instance:test.Test_2@399f45b1]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeClass()[pri:0, instance:test.Test_2@399f45b1]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@399f45b1]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.orderVerifyMobile()[pri:8, instance:test.Test_2@399f45b1]">orderVerifyMobile</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.orderVerifyWatch()[pri:6, instance:test.Test_2@399f45b1]">orderVerifyWatch</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/10/16 23:38:45</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.signInverify()[pri:0, instance:test.Test_2@399f45b1]">signInverify</td> 
-  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:47:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:47:49</td>   <td>17993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:48:26</td>   <td>54990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:48:28</td>   <td>56792</td> <td>&nbsp;</td><td title="&lt;&lt;Test_2.afterTest()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:46:44</td>   <td>-47224</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeClass()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:46:46</td>   <td>-45623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:47:33</td>   <td>1895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:47:51</td>   <td>19763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:46:39</td>   <td>-52201</td> <td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeTest(java.lang.String)[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:48:04</td>   <td>32478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.orderVerifyMobile()[pri:8, instance:test.Test_2@7d900ecf]">orderVerifyMobile</td> 
+  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:47:44</td>   <td>13010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.orderVerifyWatch()[pri:6, instance:test.Test_2@7d900ecf]">orderVerifyWatch</td> 
+  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/11/13 08:46:58</td>   <td>-33745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.signInverify()[pri:0, instance:test.Test_2@7d900ecf]">signInverify</td> 
+  <td>TestNG@637788754</td>   <td></td> </tr>
 </table>
