--- a/Amazon/test-output/old/Suite/methods.html
+++ b/Amazon/test-output/old/Suite/methods.html
@@ -1,8 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e4deb0">  <td>24/11/28 13:30:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeTest(java.lang.String)[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1523003326</td>   <td></td> </tr>
-<tr bgcolor="e4deb0">  <td>24/11/28 13:31:10</td>   <td>62169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.signInverify()[pri:0, instance:test.Test_2@7d900ecf]">signInverify</td> 
-  <td>TestNG@1523003326</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:16:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeTest(java.lang.String)[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:17:28</td>   <td>30253</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeClass()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:17:31</td>   <td>33275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:17:38</td>   <td>40291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.signInverify()[pri:0, instance:test.Test_2@7d900ecf]">signInverify</td> 
+  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:17:50</td>   <td>52665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:01</td>   <td>63211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:07</td>   <td>69345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.orderVerifyWatch()[pri:6, instance:test.Test_2@7d900ecf]">orderVerifyWatch</td> 
+  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:21</td>   <td>83506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:25</td>   <td>87668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_2.beforeMethod()[pri:0, instance:test.Test_2@7d900ecf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:29</td>   <td>91383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_2.orderVerifyMobile()[pri:8, instance:test.Test_2@7d900ecf]">orderVerifyMobile</td> 
+  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:30</td>   <td>92428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test_2.afterMethod()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>24/12/09 10:18:35</td>   <td>97768</td> <td>&nbsp;</td><td title="&lt;&lt;Test_2.afterTest()[pri:0, instance:test.Test_2@7d900ecf]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@637788754</td>   <td></td> </tr>
 </table>
